--- a/public/index.html
+++ b/public/index.html
@@ -13,5 +13,6 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <script type="text/JavaScript" src="https://openapi.map.naver.com/openapi/v3/maps.js?ncpClientId=CLIENTID"></script>
   </body>
 </html>
